@@ -1,5 +1,14 @@
 2011-01-17  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* src/gnuk.h (PIN_INPUT_CURRENT, PIN_INPUT_NEW)
+	(PIN_INPUT_CONFIRM): New.
+
+	* src/pin-cir.c (pin_main): New argument MSG_CODE.
+
+	* src/openpgp.c (get_pinpad_input): New.
+	(cmd_verify): Use get_pinpad_input.
+	(cmd_change_password): Added PINPAD_SUPPORT.
+
 	* src/openpgp.c (cmd_nop): Removed.
 
 	* src/config.h.in: ifdef-out (not for ASSEMBLER).
